# znanija-api-gateway

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml  requirements.txt
.run/: FastAPI-Uvicorn.run.xml  Test with pytest.run.xml
app/: capture_exception.py  generate_openapi.py  getenv.py  main.py  templates.py  templates_cache_coder.py
app/brainly_api/: __init__.py  api.py  exceptions.py  graphql.py  legacy.py  legacy_pages.py  transform_id.py
app/brainly_api/graphql_queries/: __init__.py
app/constants/: __init__.py
app/errors/: brainly_error.py  general_exception.py  http_exception.py  server_error.py
app/middleware/: auth_middleware.py
app/models/: __init__.py  entities.py  feed.py  payloads.py  responses.py  users.py
app/routes/: brainly_ranking.py  brainly_tasks.py  brainly_users.py  feed.py  homepage.py  moderators.py  ranking.py  reported_content.py  tasks.py  users.py
app/templates/: index.html
app/util/: __init__.py  common.py  graphql_transformers.py  legacy_transformers.py
app/utils/: __init__.py  transformers.py
test/: __init__.py  conftest.py  test_basic.py  test_moderators_routes.py  test_rankings.py  test_tasks_routes.py  test_users_routes.py
test/responses/: check_deleted_tasks.json  get_task.json  get_task_log.json
tests/: conftest.py  test_auth.py  test_moderators_routes.py  test_rankings_routes.py  test_reported_content_routes.py  test_tasks_routes.py  test_users_routes.py  util.py
tests/responses/: get_task_by_id_8.json  get_task_log_by_id_11613660.json  get_users.json
(+1 files in other folders)
