[tool.poetry]
name = "znanija-api-gateway"
version = "1.0.5"
description = "A service designed to communicate with the Brainly APIs"
authors = ["vlaex <vlaex7@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "znanija_api_gateway"}]

[tool.poetry.dependencies]
python = "^3.10"
pyquery = "^2.0.0"
fastapi-cache2 = "^0.2.0"
aiohttp = "^3.8.3"
rollbar = "^0.16.3"
jinja2 = "^3.1.2"
python-dotenv = "^0.21.0"
pydantic = "^1.10.4"
fastapi = "0.89.1"
starlette = "0.22.0"
httpx = {extras = ["http2"], version = "^0.23.3"}
uvicorn = "^0.20.0"


[tool.poetry.group.dev.dependencies]
flake8 = "5.0.4"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
